ui.apps/src/main/content/jcr_root/apps/chinational/clientlibs/clientlib-base/css/richtext.css
.cmp-text ul{
    padding: 7px 0 0 40px; /* Naresh - changed top padding to 7px, for spec to get 22 px between p tag and ul */
    
}

.cmp-text ul li {
	position: relative;
	list-style: none;
	font-size: 16px;
	padding-bottom: 3px;
	text-indent: -1.28571429em;   /* Added by German to show indent in bullet list */
	/* display: flex;          Removed by German to fix an issue with bullet lists */
}

 .cmp-text ul li::before {
	color: #00B0B9;         /* 	color of bullet or square */
	content: "\25E6";       /* 	Unicode of character to precede the list item. Modified by German to fix Defect DE2502, it was before -> content: "\25CB";  */
	position: relative;
 	font-size: 195%;        /* 	Modified by German to fix Defect DE2502, it was before -> font-size: 1em; */
	padding-right: 0.28em;  /* 	Modified by German to fix Defect DE2502, it was before -> padding-right: 0.58em; updated ny naresh as per defect */
	top: .18em;             /* 	Modified by German to fix Defect DE2502, it was before ->  top: 0em; */
	line-height: 70%;	    /*  Added by German to fix Defect DE2675 */
}

.cmp-text ol{
    padding: 7px 0 0 20px; /* Naresh - changed top padding to 7px, for spec to get 22 px between p tag and ol */
	/*     Changing value above for Defect DE2726. It was before padding: 7px 0 0 40px; */
    list-style: none;
    counter-reset: li;
    font-size: 22px;
    font-size: 16px;   
    padding-bottom: 3px;
    
}



.cmp-text ol li::before {
   
   content: counter(li); 
    color: #00B0B9; 
   /*  content: "\2686";*/
  /* Unicode of character to precede the list item */
  font-size: 1em; 
  /* em or %*/ 
  padding-right: 0.58em; /* updated ny naresh as per defect */
  /* use em*/
  position: relative;
  top: 0em; 
    
  /* use em or % */

}

.cmp-text ol li {
	counter-increment: li;
	display: flex;
}

/* Added by German for Defect DE2691 */

.right-rail-text img {
	max-width: 100%;
}

/* End of additions by German for Defect DE2691 */

/* Added by German for Defects DE2692 and DE2612 */

.infoband .link-wrapper {
	padding-top: 24px;    /* To make the button after any paragraph to have a padding on top of 24px total */
}

/* End of additions by German for Defects DE2691 and DE2612 */

/* May 18, 2018 Added by Davinder for richText Header Styles */

.h1_headline_style {
	font-size: 48px;
    line-height: 1.1;
    color: #24509a;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: 500;
    font-style: italic;
    font-stretch: normal;
    padding: 30px 0 15px 0;
    }

.h2_quote_style {
	font-size: 36px;
    line-height: 1.1;
    color: #24509a;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: 500;
    font-style: italic;
    font-stretch: normal;
    padding: 15px 0 15px 0;
    }

.h3_callout_style {
	font-size: 28px;
    line-height: 1.1;
    color: #24509a;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: 500;
    font-style: normal;
    font-stretch: normal;
    padding: 15px 0 15px 0;
    }

.h4_header_style {
	font-size: 24px;
    line-height: 1.1;
    color: #24509a;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: 500;
    font-style: normal;
    font-stretch: normal;
    padding: 10px 0 10px 0;
    }

.subheader_style {
	font-size: 20px;
    line-height: 24px;
    color: #24509a;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    padding: 10px 0 10px 0;
}

.body_copy_style {
    font-size: 16px;
    line-height: 20px;
	font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    padding: 15px 0 15px 0;
    position:relative;
    }

.button_label_style {
    font-size: 15px;
    line-height: 1.7em; /* equivalent to 20px */
	font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: bold;
    font-style: normal;
    font-stretch: normal;
    text-transform: uppercase;
    padding: 10px 0 10px 0;
    position:relative;
    }

.caption_style {
    font-size: 14px;
    line-height: 20px;
	color: #94999c;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: normal;
    font-style: italic;
    font-stretch: normal;
    padding: 15px 0 15px 0;
    }

.small_text_style {
    font-size: 14px;
    line-height: 20px;
	color: #0097a9;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    padding: 10px 0 10px 0;
    position:relative;
    }

.news_blog_list_heading_style {
	font-size: 24px;
    line-height: 1.1;
    color: #426DA9;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: 500;
    font-style: normal;
    font-stretch: normal;
    padding: 10px 0 0 0;
    }

.news_blog_list_date_style {
	font-size: 14px;
    line-height: 1.1;
    color: #426DA9;
    font-family: myriad-pro, 'MyriadPro-It', sans-serif;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    padding: 0px;
    }

/* End of additions by Davinder for richText Header Styles */

/* CSS elements for content band*/

/* padding for button is 25 px in desktop, its different for mobile and tablet*/
.contentBand .row .link-wrapper {
    padding-top: 25px;
}

.contentBand .row img {
    margin-bottom: 0px;
}

@media  (max-width:1024px ) {
    /* put padding for content band button, when it is used in  tablet and column flows to the top  */
    .contentBand .row .col-md-6:first-child {
        padding-bottom: 51px;
    }
    .contentBand .row .link-wrapper {
        padding-top: 22px;
    }
}

@media ( max-width :767px) {
    /* put padding for content band button, when it is used in  mobile and column flows to the top  */
    .contentBand .row .col-md-6:first-child {
        padding-bottom: 38px;
    }
    .contentBand .row .link-wrapper {
            padding-top: 53px;
    }
}

/* CSS overrides for rich text under full bleed tile*/
.full-bleed .cmp-text ol li::before {
    color: #fff;
}

.full-bleed .cmp-text ul li::before {
	color: #fff;
}

.full-bleed .cmp-text a ,
.full-bleed .cmp-text a:visited,
.full-bleed .cmp-text a:focus{
	color: #fff;
	text-decoration: underline;
}

